--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,13 @@
     "map": "cpp",
     "random": "cpp",
     "vector": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "xtree": "cpp",
+    "utility": "cpp",
+    "algorithm": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xutility": "cpp",
+    "chrono": "cpp"
   }
 }
